--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,3 +6,55 @@
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+
+
+
+
+
+
+@import url(https://fonts.googleapis.com/earlyaccess/nanumgothiccoding.css);//google web font added
+
+/* 글 본문 폰트 적용*/
+body {
+    font-family: 'Nanum Gothic Coding', serif;
+}
+
+/* 블로그 들어갔을때 글 제목 폰트 변경*/
+div {
+    article{
+        h2{
+            a{
+                font-family: 'Nanum Gothic Coding', serif;
+            }
+        }
+    }
+}
+/* 글 내의 타이틀 변경*/
+article{
+    div{
+        header{
+            h1{
+                font-family: 'Nanum Gothic Coding', serif;
+            }
+        }
+    }
+}
+article{
+    div{
+        section{
+            h2{
+                font-family: 'Nanum Gothic Coding', serif;
+            }
+        }
+    }
+}
+div{
+    article{
+        div{
+            a{
+                font-family: 'Nanum Gothic Coding', serif;
+            }
+        }
+    }
+}
