--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
 
 {% include seo.html %}
 <link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
+<link rel="apple-touch-icon" sizes="57x57" href="{{ stie.baseurl }}/assets/logo.ico/apple-icon-57x57.png">
 
 <!-- https://t.co/dKP3o1e -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
