--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -3,4 +3,6 @@
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
+<meta http-equiv="Content-Security-Policy" content="default-src 'none'; connect-src 'self';font-src 'self'; img-src 'self' data: https:; style-src 'self' ; script-src 'self'">
+
 <!-- end custom head snippets -->
