--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -3,6 +3,7 @@
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
-<meta http-equiv="Content-Security-Policy" content="default-src 'none'; connect-src 'self';font-src 'self'; img-src 'self' data: https:; style-src 'self' ; script-src 'self'">
+
+<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" />
 
 <!-- end custom head snippets -->
